# catholic-network-tools

./: .env.example  .gitignore  .pre-commit-config.yaml  AUTOMATED_DEPLOYMENT.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  GITHUB_STREAMLIT_CLOUD_WORKFLOW.md  INSTALLATION.md  LICENSE  MANUAL_STEPS.md  Makefile  NOTICE  PR_DESCRIPTION.md  PR_INSTRUCTIONS.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  SECURITY.md  START_HERE.md  WORLD_CLASS_FEATURES_SUMMARY.md  app.py  app_old.py  deploy-cloud.sh  deploy.sh  pyproject.toml  requirements.txt
.github/scripts/: github-api-pusher.py
.github/workflows/: ci.yml  deploy-streamlit.yml  push-to-github.yml
.streamlit/: config.toml
Docs/architecture/: DESIGN.md  IP_POLICY.md  SCALING_BOUNDARIES.md  SYSTEM_OVERVIEW.md
Tests/: test_scaffold.py
app/: 01_Home.py
app/pages/: 03_Pastoral_Care.py  04_Justice.py  05_Formation.py  06_Stewardship.py  07_Admin.py  09_Liturgy_of_the_Day.py  11_Catechist_Certification.py  13_Find_a_Church.py
archive/: ARCHITECTURE_NESTED_v0.2.md  FIX_STREAMLIT_FORM.md  GITHUB_API_PUSH.md  README_GLOBAL.md  README_OLD.md
catholic_network_tools/: gospelmap_sync.py
data/sample/: attendance.csv  giving.csv
docs/: THEOLOGY.md
pages/: 01_Version_Check.py  02_Sacraments.py  07_Admin.py  08_Global_Network.py  10_Small_Christian_Communities.py  12_Daily_Prayers.py
parishes/consolata-westlands/: config.json
parishes/template/: config.json
src/spiritual_os/: aggregation.py  auth.py  church_directory.py  context_aware.py  database.py  federated_identity.py  forms.py  liturgical_calendar.py  mass_readings.py  models.py  prayers.py  sms_bridge.py  visualizations.py  voice_interface.py
src/spiritual_os/domain/: catechist.py  diocese.py  journal.py  liturgy.py  parish.py  rule_of_life.py  sacraments.py  scc.py
src/spiritual_os/storage/: local_store.py
src/spiritual_os/ui/: mobile_css.py
src/spiritual_os/utils/: data_io.py
tests/smoke/: __init__.py  test_governance.py
